NEXT-2259 - Fix styling and component structure

--- a/Resources/administration/src/module/sw-settings/component/sw-system-config/sw-system-config.scss
+++ b/Resources/administration/src/module/sw-settings/component/sw-system-config/sw-system-config.scss
@@ -1,3 +1,5 @@
-.sw-system-config__config-element:not(:first-child){
-  padding-top: 20px;
+.sw-system-config {
+    .sw-select {
+        margin-bottom: 22px;
+    }
 }
