--- a/Resources/administration/src/module/sw-settings/component/sw-system-config/sw-system-config.html.twig
+++ b/Resources/administration/src/module/sw-settings/component/sw-system-config/sw-system-config.html.twig
@@ -1,41 +1,20 @@
 {% block sw_system_config %}
-    <sw-page :showSearchBar="false"
-             :showSmartBar="true">
-
-        {% block sw_system_config_header %}
-            <template slot="smart-bar-header">
-                <div class="header">
-                    {% block sw_system_config_header %}
-                        <h2>{{ $tc('sw-settings.sw-system-config.title', 1, { title }) }}</h2>
+    <div class="sw-system-config">
+        {% block sw_system_config_content_card %}
+            <sw-card v-for="card, index in config"
+                     :key="index"
+                     :isLoading="isLoading"
+                     :title="getInlineSnippet(card.title)">
+                <template v-for="element in card.elements">
+                    {% block sw_system_config_content_card_field %}
+                        <sw-form-field-renderer :config="element"
+                                                :key="element.name"
+                                                v-model="actualConfigData[element.name]"
+                                                v-bind="element">
+                        </sw-form-field-renderer>
                     {% endblock %}
-                    <sw-button variant="primary" @click="saveAll">
-                        {{ $tc('sw-settings.sw-system-config.save') }}
-                    </sw-button>
-                </div>
-            </template>
+                </template>
+            </sw-card>
         {% endblock %}
-
-        {% block sw_system_config_content %}
-            <template slot="content">
-                <sw-card-view slot="content">
-                    {% block sw_system_config_content_card %}
-                        <sw-card v-for="card, index in config"
-                                 :key="index"
-                                 :title="getInlineSnippet(card.title)">
-                            <div v-for="element in card.elements"
-                                 class="sw-system-config__config-element">
-                                {% block sw_system_config_content_card_field %}
-                                    <sw-form-field-renderer :config="element"
-                                                            :key="element.name"
-                                                            v-model="actualConfigData[element.name]"
-                                                            v-bind="element">
-                                    </sw-form-field-renderer>
-                                {% endblock %}
-                            </div>
-                        </sw-card>
-                    {% endblock %}
-                </sw-card-view>
-            </template>
-        {% endblock %}
-    </sw-page>
+    </div>
 {% endblock %}
