NEXT-2639 - Fix association naming for configurator settings and property options

--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-variants/sw-product-detail-variants.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-variants/sw-product-detail-variants.html.twig
@@ -5,7 +5,7 @@
                 :options="configuratorStore"
                 :overlay="false"
                 :collapsible="false"
-                @variationssGenerated="updateVariations">
+                @variationsGenerated="updateVariations">
         </sw-product-variants-configurator-selection>
     </sw-card>
 
