--- a/Resources/administration/src/app/component/structure/sw-sales-channel-switch/sw-sales-channel-switch.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-sales-channel-switch/sw-sales-channel-switch.html.twig
@@ -40,7 +40,7 @@
                     ref="salesChannelSelect"
                     :disabled="disabled"
                     id="salesChannelSelect"
-                    {#:defaultOptionValue="$tc('sw-sales-channel-switch.labelDefaultOption')"#}
+                    :defaultOption="$tc('sw-sales-channel-switch.labelDefaultOption')"
                     required
                     :label="label"
                     :placeholder="$tc('sw-sales-channel-switch.placeholderSelect')"
