--- a/Resources/administration/src/module/sw-settings-seo/page/sw-settings-seo/sw-settings-seo.html.twig
+++ b/Resources/administration/src/module/sw-settings-seo/page/sw-settings-seo/sw-settings-seo.html.twig
@@ -18,7 +18,7 @@
         {% block sw_settings_seo_smart_bar_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_settings_seo_smart_bar_actions_add %}
-                    <sw-button variant="primary" @click="onClickSave()">
+                    <sw-button variant="primary" @click="onSave()">
                         {{ $tc('sw-settings-seo.general.buttonSave') }}
                     </sw-button>
                 {% endblock %}
