NEXT-2363 - Implement product box CMS element

--- a/Resources/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.scss
+++ b/Resources/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.scss
@@ -1,8 +1,8 @@
 @import "~scss/variables";
 
-.sw-cms-el-preview-product-box {
+.sw-cms-el-product-listing {
     min-height: 200px;
-    padding: 10px;
+    padding: 60px 200px;
     display: grid;
     align-items: center;
     align-content: center;
