--- a/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
@@ -1,34 +1,53 @@
 {% block sw_cms_element_product_box %}
-    <div class="sw-cms-el-product-box" :class="`box-${element.data.boxLayout}`" v-if="element.data.product">
-        <div class="sw-cms-el-product-box__body">
+    <div class="sw-cms-el-product-box" :class="`box-${element.data.boxLayout}`" v-if="product">
+        <div class="sw-cms-el-product-box__content">
 
-            <div class="sw-cms-el-product-box__image">
+            <div class="sw-cms-el-product-box__badges">
+                <div class="sw-cms-el-product-box__badge-discount" v-if="product.hasPseudoPrice">&#37;</div>
+                <div class="sw-cms-el-product-box__badge-topseller" v-if="product.markAsTopseller">Topseller</div>
+                <div class="sw-cms-el-product-box__badge-new" v-if="product.newProduct">New</div>
+            </div>
+
+            <div class="sw-cms-el-product-box__media">
                 <a href="#"
-                   :title="element.data.product.name"
+                   :title="product.name"
                    class="sw-cms-el-product-box__image-link">
-                    <img class="sw-cms-el-product-box__image-element"
-                         :src="element.data.product.cover.media.url"
-                         :alt="element.data.product.cover.media.alt">
+                    <img class="sw-cms-el-product-box__image"
+                         :src="product.cover.media.url"
+                         :alt="product.cover.media.alt">
                 </a>
             </div>
 
             <div class="sw-cms-el-product-box__info">
-                <a href="#" class="sw-cms-el-product-box__name" :title="element.data.product.name">
-                    {{ element.data.product.name }}
+                <a href="#" class="sw-cms-el-product-box__name" :title="product.name">
+                    {{ product.name }}
                 </a>
 
                 <div class="sw-cms-el-product-box__description">
-                    {{ element.data.product.description | truncate(200, true, '...') }}
+                    {{ product.description | truncate(200, true, '...') }}
                 </div>
 
                 <div class="sw-cms-el-product-box__price-info">
-                    <p class="sw-cms-el-product-box__price">
-                        {{ element.data.product.price.gross | currency }}
-                    </p>
+                    <div class="sw-cms-el-product-box__price-unit"
+                         v-if="product.purchaseUnit && product.purchaseUnit !== 0">
+                        <span class="sw-cms-el-product-box__price-unit-label">Content: </span>
+                        <span class="sw-cms-el-product-box__price-unit-content">{{ product.purchaseUnit }} {{ product.packUnit }}</span><br>
+
+                        <span class="sw-cms-el-product-box__price-unit-reference"
+                              v-if="product.purchaseUnit && product.referenceUnit && product.purchaseUnit !== product.referenceUnit">
+                            ({{ (product.price.gross * product.referenceUnit / product.purchaseUnit) | currency }}
+                            * / {{ product.referenceUnit }} {{ product.packUnit }})
+                        </span>
+                    </div>
+
+                    <div class="sw-cms-el-product-box__price">
+                        {{ product.price.gross | currency }}
+                    </div>
                 </div>
 
-                <div class="sw-cms-el-product-box__buy-button">
-                    <button>Add to cart</button>
+                <div class="sw-cms-el-product-box__actions">
+                    <a href="#" class="sw-cms-el-product-box__detail-action">Details</a>
+                    <a href="#" class="sw-cms-el-product-box__buy-action">Add to cart</a>
                 </div>
             </div>
         </div>
