--- a/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.html.twig
@@ -1,55 +1,82 @@
 {% block sw_cms_element_product_box %}
     <div class="sw-cms-el-product-box" :class="`box-${element.data.boxLayout}`" v-if="product">
-        <div class="sw-cms-el-product-box__content">
 
-            <div class="sw-cms-el-product-box__badges">
-                <div class="sw-cms-el-product-box__badge-discount" v-if="product.hasPseudoPrice">&#37;</div>
-                <div class="sw-cms-el-product-box__badge-topseller" v-if="product.markAsTopseller">Topseller</div>
-                <div class="sw-cms-el-product-box__badge-new" v-if="product.newProduct">New</div>
-            </div>
+        {% block sw_cms_element_product_box_content %}
+            <div class="sw-cms-el-product-box__content">
 
-            <div class="sw-cms-el-product-box__media">
-                <a href="#"
-                   :title="product.name"
-                   class="sw-cms-el-product-box__image-link">
-                    <img class="sw-cms-el-product-box__image"
-                         :src="product.cover.media.url"
-                         :alt="product.cover.media.alt">
-                </a>
-            </div>
-
-            <div class="sw-cms-el-product-box__info">
-                <a href="#" class="sw-cms-el-product-box__name" :title="product.name">
-                    {{ product.name }}
-                </a>
-
-                <div class="sw-cms-el-product-box__description">
-                    {{ product.description | truncate(200, true, '...') }}
-                </div>
-
-                <div class="sw-cms-el-product-box__price-info">
-                    <div class="sw-cms-el-product-box__price-unit"
-                         v-if="product.purchaseUnit && product.purchaseUnit !== 0">
-                        <span class="sw-cms-el-product-box__price-unit-label">Content: </span>
-                        <span class="sw-cms-el-product-box__price-unit-content">{{ product.purchaseUnit }} {{ product.packUnit }}</span><br>
-
-                        <span class="sw-cms-el-product-box__price-unit-reference"
-                              v-if="product.purchaseUnit && product.referenceUnit && product.purchaseUnit !== product.referenceUnit">
-                            ({{ (product.price.gross * product.referenceUnit / product.purchaseUnit) | currency }}
-                            * / {{ product.referenceUnit }} {{ product.packUnit }})
-                        </span>
+                {% block sw_cms_element_product_box_badges %}
+                    <div class="sw-cms-el-product-box__badges">
+                        <div class="sw-cms-el-product-box__badge-discount" v-if="product.hasPseudoPrice">&#37;</div>
+                        <div class="sw-cms-el-product-box__badge-topseller" v-if="product.markAsTopseller">
+                            {{ $tc('sw-cms.elements.labelProductBadgeTopseller') }}
+                        </div>
+                        <div class="sw-cms-el-product-box__badge-new" v-if="product.newProduct">
+                            {{ $tc('sw-cms.elements.labelProductBadgeNew') }}
+                        </div>
                     </div>
+                {% endblock %}
 
-                    <div class="sw-cms-el-product-box__price">
-                        {{ product.price.gross | currency }}
+                {% block sw_cms_element_product_box_media %}
+                    <div class="sw-cms-el-product-box__media">
+                        <a href="#"
+                           :title="product.name"
+                           class="sw-cms-el-product-box__image-link">
+                            <img class="sw-cms-el-product-box__image"
+                                 :src="product.cover.media.url"
+                                 :alt="product.cover.media.alt">
+                        </a>
                     </div>
-                </div>
+                {% endblock %}
 
-                <div class="sw-cms-el-product-box__actions">
-                    <a href="#" class="sw-cms-el-product-box__detail-action">Details</a>
-                    <a href="#" class="sw-cms-el-product-box__buy-action">Add to cart</a>
-                </div>
+                {% block sw_cms_element_product_box_info %}
+                    <div class="sw-cms-el-product-box__info">
+
+                        {% block sw_cms_element_product_box_name %}
+                            <a href="#" class="sw-cms-el-product-box__name" :title="product.name">
+                                {{ product.name }}
+                            </a>
+                        {% endblock %}
+
+                        {% block sw_cms_element_product_box_description %}
+                            <div class="sw-cms-el-product-box__description">
+                                {{ product.description | truncate(200, true, '...') }}
+                            </div>
+                        {% endblock %}
+
+                        {% block sw_cms_element_product_box_price_info %}
+                            <div class="sw-cms-el-product-box__price-info">
+
+                                {% block sw_cms_element_product_box_price_unit %}
+                                    <div class="sw-cms-el-product-box__price-unit"
+                                         v-if="product.purchaseUnit && product.purchaseUnit !== 0">
+                                        <span class="sw-cms-el-product-box__price-unit-label">{{ $tc('sw-cms.elements.labelProductPriceUnitContent') }} </span>
+                                        <span class="sw-cms-el-product-box__price-unit-content">{{ product.purchaseUnit }} {{ product.packUnit }}</span><br>
+
+                                        <span class="sw-cms-el-product-box__price-unit-reference"
+                                              v-if="product.purchaseUnit && product.referenceUnit && product.purchaseUnit !== product.referenceUnit">
+                                            ({{ (product.price.gross * product.referenceUnit / product.purchaseUnit) | currency }}
+                                            * / {{ product.referenceUnit }} {{ product.packUnit }})
+                                        </span>
+                                    </div>
+                                {% endblock %}
+
+                                {% block sw_cms_element_product_box_price %}
+                                    <div class="sw-cms-el-product-box__price">
+                                        {{ product.price.gross | currency }}
+                                    </div>
+                                {% endblock %}
+                            </div>
+                        {% endblock %}
+
+                        {% block sw_cms_element_product_box_actions %}
+                            <div class="sw-cms-el-product-box__actions">
+                                <a href="#" class="sw-cms-el-product-box__detail-action">{{ $tc('sw-cms.elements.labelProductActionDetail') }}</a>
+                                <a href="#" class="sw-cms-el-product-box__buy-action">{{ $tc('sw-cms.elements.labelProductActionBuy') }}</a>
+                            </div>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
             </div>
-        </div>
+        {% endblock %}
     </div>
 {% endblock %}
