NTR - context menu bug in tree

--- a/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
+++ b/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.html.twig
@@ -69,33 +69,24 @@
                 {% block sw_tree_item_element_actions %}
                     <div class="sw-tree-item__actions">
                         <slot name="actions" :item="item" :openTreeItem="openTreeItem">
-                            <sw-context-button>
+                            <sw-context-button :disabled="isDisabled">
                             {% block sw_tree_items_actions_before %}
                                 <sw-context-menu-item
-                                    v-tooltip="{ showDelay: 300, message:
-                                                $tc(`${translationContext}.general.actions.actionsDisabledInLanguage`),
-                                                disabled: disableContextMenu }"
-                                    :disabled="currentEditElement !== null || disableContextMenu"
+                                    v-tooltip="toolTip"
                                     @click="addElement(item, 'before');">
                                     {{ $tc(`${translationContext}.general.actions.createBefore`) }}
                                 </sw-context-menu-item>
                             {% endblock %}
                             {% block sw_tree_items_actions_after %}
                                 <sw-context-menu-item
-                                    v-tooltip="{ showDelay: 300, message:
-                                                $tc(`${translationContext}.general.actions.actionsDisabledInLanguage`),
-                                                disabled: disableContextMenu }"
-                                    :disabled="currentEditElement !== null || disableContextMenu"
+                                    v-tooltip="toolTip"
                                     @click="addElement(item, 'after');">
                                     {{ $tc(`${translationContext}.general.actions.createAfter`) }}
                                 </sw-context-menu-item>
                             {% endblock %}
                             {% block sw_tree_items_actions_sub %}
                                 <sw-context-menu-item
-                                    v-tooltip="{ showDelay: 300, message:
-                                                $tc(`${translationContext}.general.actions.actionsDisabledInLanguage`),
-                                                disabled: disableContextMenu }"
-                                    :disabled="currentEditElement !== null || disableContextMenu"
+                                    v-tooltip="toolTip"
                                     @click="addSubElement(item); openTreeItem(true)">
                                     {{ $tc(`${translationContext}.general.actions.createSub`) }}
                                 </sw-context-menu-item>
@@ -105,12 +96,12 @@
                                 <div class="sw-context-menu__group">
                                     {% block sw_tree_items_actions_edit %}
                                         <sw-context-menu-item @click="onChangeRoute(item)">
-                                            {{ $tc('sw-tree.general.actions.edit') }}
+                                            {{ $tc('sw-tree.actions.edit') }}
                                         </sw-context-menu-item>
                                     {% endblock %}
                                     {% block sw_tree_items_actions_delete %}
                                         <sw-context-menu-item variant="danger" @click="deleteElement(item)">
-                                            {{ $tc('sw-tree.general.actions.delete') }}
+                                            {{ $tc('sw-tree.actions.delete') }}
                                         </sw-context-menu-item>
                                     {% endblock %}
                                 </div>
@@ -177,33 +168,24 @@
                                                                v-if="$scopedSlots.actions"></sw-vnode-renderer>
                                             <div v-else class="sw-tree-item__actions">
                                                 <slot name="actions" :item="item" :openTreeItem="openTreeItem">
-                                                    <sw-context-button>
+                                                    <sw-context-button :disabled="isDisabled">
                                                         {% block sw_tree_items_actions_before %}
                                                             <sw-context-menu-item
-                                                                v-tooltip="{ showDelay: 300, message:
-                                                                            $tc(`${translationContext}.general.actions.actionsDisabledInLanguage`),
-                                                                            disabled: disableContextMenu }"
-                                                                :disabled="currentEditElement !== null || disableContextMenu"
+                                                                v-tooltip="toolTip"
                                                                 @click="addElement(item, 'before');">
                                                                 {{ $tc(`${translationContext}.general.actions.createBefore`) }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
                                                         {% block sw_tree_items_actions_after %}
                                                             <sw-context-menu-item
-                                                                v-tooltip="{ showDelay: 300, message:
-                                                                            $tc(`${translationContext}.general.actions.actionsDisabledInLanguage`),
-                                                                            disabled: disableContextMenu }"
-                                                                :disabled="currentEditElement !== null || disableContextMenu"
+                                                                v-tooltip="toolTip"
                                                                 @click="addElement(item, 'after');">
                                                                 {{ $tc(`${translationContext}.general.actions.createAfter`) }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
                                                         {% block sw_tree_items_actions_sub %}
                                                             <sw-context-menu-item
-                                                                v-tooltip="{ showDelay: 300, message:
-                                                                            $tc(`${translationContext}.general.actions.actionsDisabledInLanguage`),
-                                                                            disabled: disableContextMenu }"
-                                                                :disabled="currentEditElement !== null || disableContextMenu"
+                                                                v-tooltip="toolTip"
                                                                 @click="addSubElement(item); openTreeItem(true)">
                                                                 {{ $tc(`${translationContext}.general.actions.createSub`) }}
                                                             </sw-context-menu-item>
@@ -213,12 +195,12 @@
                                                         <div class="sw-context-menu__group">
                                                             {% block sw_tree_items_actions_edit %}
                                                                 <sw-context-menu-item @click="onChangeRoute(item)">
-                                                                    {{ $tc('sw-tree.general.actions.edit') }}
+                                                                    {{ $tc('sw-tree.actions.edit') }}
                                                                 </sw-context-menu-item>
                                                             {% endblock %}
                                                             {% block sw_tree_items_actions_delete %}
                                                                 <sw-context-menu-item variant="danger" @click="deleteElement(item)">
-                                                                    {{ $tc('sw-tree.general.actions.delete') }}
+                                                                    {{ $tc('sw-tree.actions.delete') }}
                                                                 </sw-context-menu-item>
                                                             {% endblock %}
                                                         </div>
